<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.Level.MainMenuActivity">

    <ImageView
        android:id="@+id/bgView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_view" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_layout"
        android:backgroundTint="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        android:outlineAmbientShadowColor="#000"
        android:outlineSpotShadowColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/atma_medium"
            android:text="Main Menu"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="186dp"
            android:layout_height="63dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/basic_button_bg"
            android:fontFamily="@font/atma_medium"
            android:onClick="startLevel1MainMenu"
            android:text="@string/level1" />

        <Button
            android:id="@+id/button4"
            android:layout_width="173dp"
            android:layout_height="58dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/basic_button_bg"
            android:fontFamily="@font/atma_medium"
            android:onClick="startLevel2MainMenu"
            android:text="@string/level2" />

        <Button
            android:id="@+id/button5"
            android:layout_width="181dp"
            android:layout_height="58dp"
            android:layout_marginHorizontal="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/basic_button_bg"
            android:fontFamily="@font/atma_medium"
            android:onClick="startLevel3MainMenu"
            android:text="@string/level3" />

    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/atma_medium"
        android:onClick="logout"
        android:text="@string/title_activity_main_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/scoreboardButton"
        android:layout_width="142dp"
        android:layout_height="69dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/basic_button_bg"
        android:fontFamily="@font/atma_medium"
        android:onClick="openScoreboard"
        android:text="@string/title_activity_main_scoreboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>