<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.User.LoginActivity">

    <ImageView
        android:id="@+id/bgView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_view" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="105dp"
        android:layout_height="46dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/basic_button_bg"
        android:onClick="onSignUpButtonClick"
        android:text="@string/title_activity_main_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgView"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_layout"
        android:gravity="center"
        android:orientation="vertical"
        android:outlineAmbientShadowColor="#000"
        android:outlineSpotShadowColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/title_activity_main_login"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="229dp"
            android:layout_height="59dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="@drawable/basic_textview_bg"
            android:ems="10"
            android:hint="@string/title_activity_main_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="215dp"
            android:layout_height="60dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:autofillHints=""
            android:background="@drawable/basic_textview_bg"
            android:ems="10"
            android:hint="@string/title_activity_main_password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="163dp"
            android:layout_height="67dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/basic_button_bg"
            android:onClick="onLogin"
            android:text="@string/title_activity_main_login" />
    </LinearLayout>

    <ImageView
        android:id="@+id/loginLoadingView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loading_image" />

</androidx.constraintlayout.widget.ConstraintLayout>